@@ -4,6 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 <ScrollView
+    android:id="@+id/scrolltext"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1.0"
@@ -15,6 +16,51 @@
         android:layout_weight="1.0"
 	android:typeface="monospace" />
 </ScrollView>
+<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+<ImageView
+        android:id="@+id/preview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+</LinearLayout>
+<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+<Button
+        android:id="@+id/shutter"
+        android:layout_width="fill_parent"
+	android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+	android:typeface="monospace"
+	android:text="Shutter"
+	android:layout_marginLeft="5sp"
+	android:layout_marginRight="5sp"
+	android:background="#8000ff00" />
+<Button
+        android:id="@+id/readbuffer"
+        android:layout_width="fill_parent"
+	android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+	android:typeface="monospace"
+	android:text="Readbuf"
+	android:layout_marginLeft="5sp"
+	android:layout_marginRight="5sp"
+	android:padding="5sp"
+	android:background="#8000ff00" />
+<Button
+        android:id="@+id/focus"
+        android:layout_width="fill_parent"
+	android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+	android:typeface="monospace"
+	android:text="Focus"
+	android:layout_marginLeft="5sp"
+	android:layout_marginRight="5sp"
+	android:background="#8000ff00" />
+</LinearLayout>
 <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
